# ibeji-example-applications

./: .gitignore  Cargo.toml  Dockerfile.freyja_apps  Dockerfile.freyja_apps.amd64  Dockerfile.freyja_apps.arm64  Dockerfile.freyja_apps.multi  NOTICE  README.md  ibeji-ex.sln
.freyja/config/: grpc_proxy_config.json
.freyja/property_sample/config/: mock_mapping_config.json
.freyja/smart_trailer/config/: mock_mapping_config.json
.github/workflows/: alex-recommends-ci.yml  devskim.yml  dotnet-ci.yml  editorconfig-audit-ci.yml  markdown-ci.yml  rust-ci.yml  security-audit.yml
cloud_connectors/azure/: Dockerfile.dt_connector  Dockerfile.dt_connector.amd64  Dockerfile.dt_connector.arm64  README.md  container_startup.sh
cloud_connectors/azure/container/scripts/: container_startup.sh
cloud_connectors/azure/digital_twins_connector/: README.md  build.sh
cloud_connectors/azure/digital_twins_connector/src/DigitalTwinsClientWrapper/: DigitalTwinsClientWrapper.cs  DigitalTwinsClientWrapper.csproj
cloud_connectors/azure/digital_twins_connector/src/core/: DigitalTwinsConnector.csproj  DigitalTwinsConnectorService.cs  Program.cs
cloud_connectors/azure/digital_twins_connector/tests/DigitalTwinsClientWrapper.Tests/: DigitalTwinsClientWrapper.Tests.cs  DigitalTwinsClientWrapper.Tests.csproj
cloud_connectors/azure/mqtt_connector/: Cargo.toml  README.md
cloud_connectors/azure/mqtt_connector/azure_function/src/: function.csproj  run.cs
cloud_connectors/azure/mqtt_connector/azure_function/tests/: MQTTConnectorAzureFunction.Tests.cs  MQTTConnectorAzureFunction.Tests.csproj
cloud_connectors/azure/mqtt_connector/src/: main.rs  mqtt_connector.rs
cloud_connectors/azure/sample-dtdl/: README.md  trailer.json
cloud_connectors/azure/scripts/: digital_twins_setup.sh  digital_twins_setup_smart_trailer.sh
cloud_connectors/mqtt_connector/: Cargo.toml  README.md
cloud_connectors/mqtt_connector/src/: mqtt_connector.rs
cloud_connectors/resources/: .globalconfig
cloud_connectors/resources/azure_function/src/: function.csproj
cloud_connectors/resources/scripts/: digital_twins_setup.sh  digital_twins_setup_smart_trailer.sh
container/: README.md
container/cargo/: config.toml
container/scripts/: container_startup.sh
freyja_adapters/cloud/azure_cloud_connector_adapter/: Cargo.toml  README.md  build.rs
freyja_adapters/cloud/azure_cloud_connector_adapter/res/: azure_cloud_connector_adapter_config.default.json
freyja_adapters/cloud/azure_cloud_connector_adapter/src/: azure_cloud_connector_adapter.rs  config.rs
freyja_adapters/data/grpc_data_adapter/: README.md
freyja_adapters/digital_twin/ibeji_adapter/: Cargo.toml  README.md  build.rs
freyja_adapters/digital_twin/ibeji_adapter/res/: ibeji_adapter_config.default.json  ibeji_adapter_config.sample.json
freyja_adapters/digital_twin/ibeji_adapter/src/: config.rs  ibeji_adapter.rs
freyja_apps/e2e/: Cargo.toml  README.md
freyja_apps/e2e/src/: main.rs
freyja_apps/ibeji_adapter/: Cargo.toml  README.md
freyja_apps/ibeji_adapter/src/: main.rs
freyja_apps/ibeji_integration/: Cargo.toml  README.md
freyja_apps/ibeji_integration/src/: main.rs
freyja_apps/in_memory/: Cargo.toml  README.md
freyja_apps/template/: Cargo.template.toml  README.md
freyja_apps/template/src/: main.rs
proto/cloud_connector/: Cargo.toml  build.rs
proto/cloud_connector/src/: lib.rs
proto/common/src/: lib.rs
tools/: notice_generation.sh  run_doctests.sh
tools/cg/: about.toml
