# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[workspace]
# The default resolver for workspaces is different than for regular packages, so use v2 to avoid warnings
resolver = "2"
members = [
    "cloud_connectors/azure/mqtt_connector",
    "cloud_connectors/azure/proto-build",
    "freyja_adapters/cloud/azure_cloud_connector_adapter",
    "freyja_apps/e2e",
    "freyja_apps/ibeji_integration",
    "freyja_apps/in_memory",
]

[workspace.dependencies]
# Local dependencies
azure-cloud-connector-adapter = { path = "freyja_adapters/cloud/azure_cloud_connector_adapter" }
azure-cloud-connector-proto = { path = "cloud_connectors/azure/proto-build" }

# ESDV dependencies
# Versioning is managed by the Cargo.lock file rather than copying rev properties to all of these

## Ibeji
core-protobuf-data-access = { git = "https://github.com/eclipse-ibeji/ibeji" }

## Freyja
cloud-connector-proto = { git = "https://github.com/eclipse-ibeji/freyja" }
file-service-discovery-adapter = { git = "https://github.com/eclipse-ibeji/freyja" }
freyja = { git = "https://github.com/eclipse-ibeji/freyja" }
freyja-build-common = { git = "https://github.com/eclipse-ibeji/freyja" }
freyja-common = { git = "https://github.com/eclipse-ibeji/freyja" }
grpc-cloud-adapter = { git = "https://github.com/eclipse-ibeji/freyja" }
grpc-digital-twin-adapter = { git = "https://github.com/eclipse-ibeji/freyja" }
grpc-service-discovery-adapter = { git = "https://github.com/eclipse-ibeji/freyja" }
sample-grpc-data-adapter = { git = "https://github.com/eclipse-ibeji/freyja" }
in-memory-mock-cloud-adapter = { git = "https://github.com/eclipse-ibeji/freyja" }
in-memory-mock-digital-twin-adapter = { git = "https://github.com/eclipse-ibeji/freyja" }
in-memory-mock-mapping-adapter = { git = "https://github.com/eclipse-ibeji/freyja" }
in-memory-mock-data-adapter = { git = "https://github.com/eclipse-ibeji/freyja" }
managed-subscribe-data-adapter = { git = "https://github.com/eclipse-ibeji/freyja" }
mqtt-data-adapter = { git = "https://github.com/eclipse-ibeji/freyja" }
proc-macros = { git = "https://github.com/eclipse-ibeji/freyja" }

## Chariott
service_discovery_proto = { git = "https://github.com/eclipse-chariott/chariott" }

# Cargo dependencies
async-trait = "0.1.77"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
paho-mqtt = "0.12.1"
prost = "0.12.3"
serde = "1.0.197"
serde_json = "1.0.114"
strum = "0.26.1"
strum_macros = "0.26.2"
tempfile = "3.10.1"
time = "0.3.34"
tokio = "1.36.0"
tokio-stream = "0.1.15"
tonic = "0.11.0"
tonic-build = "0.11.0"
tower = "0.4.13"