# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[workspace]
# The default resolver for workspaces is different than for regular packages, so use v2 to avoid warnings
resolver = "2"
members = [
    "cloud_connectors/mqtt_connector",
    "freyja_apps/e2e",
    "freyja_apps/ibeji_integration",
    "freyja_apps/in_memory",
    "proto/cloud_connector",
    "proto/common"
]

[workspace.dependencies]
# Local dependencies
cloud-connector-proto = { path = "proto/cloud_connector" }
proto-common = { path = "proto/common" }

# ESDV dependencies
# Versioning is managed by the Cargo.lock file rather than copying rev properties to all of these

## Freyja
file-service-discovery-adapter = { git = "https://github.com/eclipse-ibeji/freyja" }
freyja = { git = "https://github.com/eclipse-ibeji/freyja" }
freyja-common = { git = "https://github.com/eclipse-ibeji/freyja" }
freyja-build-common = { git = "https://github.com/eclipse-ibeji/freyja" }
freyja-proto-common = { git = "https://github.com/eclipse-ibeji/freyja", package = "proto-common" }
grpc-cloud-adapter = { git = "https://github.com/eclipse-ibeji/freyja" }
grpc-digital-twin-adapter = { git = "https://github.com/eclipse-ibeji/freyja" }
grpc-service-discovery-adapter = { git = "https://github.com/eclipse-ibeji/freyja" }
sample-grpc-data-adapter = { git = "https://github.com/eclipse-ibeji/freyja" }
in-memory-mock-cloud-adapter = { git = "https://github.com/eclipse-ibeji/freyja" }
in-memory-mock-digital-twin-adapter = { git = "https://github.com/eclipse-ibeji/freyja" }
in-memory-mock-mapping-adapter = { git = "https://github.com/eclipse-ibeji/freyja" }
in-memory-mock-data-adapter = { git = "https://github.com/eclipse-ibeji/freyja" }
managed-subscribe-data-adapter = { git = "https://github.com/eclipse-ibeji/freyja" }
mqtt-data-adapter = { git = "https://github.com/eclipse-ibeji/freyja" }
proc-macros = { git = "https://github.com/eclipse-ibeji/freyja" }

# Cargo dependencies
async-trait = "0.1.77"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
paho-mqtt = "0.12.1"
prost = "0.12.3"
prost-types = "0.12.3"
serde = "1.0.197"
serde_json = "1.0.115"
time = { version = "0.3.34", features = ["serde-human-readable"] }
tokio = "1.37.0"
tonic = "0.11.0"
tonic-build = "0.11.0"