# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "mqtt-cloud-connector"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
cloud-connector-proto = { workspace = true }
env_logger = { workspace = true }
freyja-common = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
paho-mqtt = { workspace = true }
proc-macros = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }