# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "freyja-in-memory-app"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# These two dependencies are required for anyone implementing a Freyja application
freyja = { git = "https://github.com/eclipse-ibeji/freyja", rev = "a07b033" }
tokio = { version = "1.0", features = ["macros"] }

# Put any dependencies that you need for your adapters down here.
# This samples utilizes the in-memory mock adapters.
in-memory-mock-cloud-adapter = { git = "https://github.com/eclipse-ibeji/freyja", rev = "a07b033" }
in-memory-mock-digital-twin-adapter = { git = "https://github.com/eclipse-ibeji/freyja", rev = "a07b033" }
in-memory-mock-mapping-client = { git = "https://github.com/eclipse-ibeji/freyja", rev = "a07b033" }