# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "freyja-in-memory-app"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# These dependencies are required for anyone implementing a Freyja application
freyja = { workspace = true }
freyja-common = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

# Put any dependencies that you need for your adapters down here.
# This samples utilizes the in-memory mock adapters.
file-service-discovery-adapter = { workspace = true }
in-memory-mock-cloud-adapter = { workspace = true }
in-memory-mock-digital-twin-adapter = { workspace = true }
in-memory-mock-mapping-adapter = { workspace = true }
in-memory-mock-data-adapter = { workspace = true }

# If built for certain architectures, enable the 'vendored-ssl' feature.
[target.'cfg(any(target_arch = "aarch64", target_arch = "x86_64"))'.dependencies]
paho-mqtt = { workspace = true, features = ["vendored-ssl"] }
