# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "cloud-connector-proto"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
freyja-build-common = { workspace = true }
freyja-proto-common = { workspace = true }
proto-common = { workspace = true }